Major fixes to index

--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -10,7 +10,7 @@ Bestandsnaam: opdracht13.3.html
     <meta charset="utf-8">
     <meta name="description" content="opdracht x">
     <meta name="keywords" content="keyword 1, keyword 2">
-    <link href="Style.css" type="text/css" rel="stylesheet">
+    <link href="CSS/style.css" type="text/css" rel="stylesheet">
      <title>
         index
      </title>
