--- a/Frontend/Home.html
+++ b/Frontend/Home.html
@@ -4,16 +4,16 @@ Auteur: Siebe van der Haring
 Aanmaakdatum: 20-05-2020: 15:55
 Bestandsnaam: opdracht13.3.html
 ----------------------------------------------------------->
-<!doctype.html> 
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="description" content="opdracht x">
-    <meta name="keywords" content="keyword 1, keyword 2">
-    <link href="Style.css" type="text/css" rel="stylesheet">
-     <title>
-        index
-     </title>
+<!DOCTYPE html>
+<html lang="nl">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="opdracht x">
+        <meta name="keywords" content="keyword 1, keyword 2">
+        <link href="CSS/style.css" type="text/css" rel="stylesheet">
+         <title>
+            index
+         </title>
     </head>
     <body>
         <header>
@@ -37,7 +37,7 @@ Bestandsnaam: opdracht13.3.html
             <hr>
         </main>
          <div class="programma">
-                <img class="programmaImg" src="Images/sabaton-tour2020.jpg">
+                <img class="programmaImg" src="Images/sabaton-tour2020.jpg" alt="sabaton tour">
             </div>
     </body>
 </html>
